Shift weaviate server config to be top-level with the LLM server config - Agents can override the default class from here, and also define their thresholds and result limit Saving the server or agent configurations will test weaviate connectivity (if configured) and ensure the object class is created Fix default handling for all configuration options Add preconfigured weaviate docker-compose file

--- a/custom_components/local_openai/translations/en.json
+++ b/custom_components/local_openai/translations/en.json
@@ -56,8 +56,9 @@
       }
     },
     "error": {
-      "cannot_connect": "Could not communicate with the server",
-      "unknown": "An unknown error occurred"
+      "cannot_connect": "Could not communicate with the LLM server",
+      "unknown": "An unknown error occurred",
+      "cannot_connect_weaviate": "Could not communicate with the Weaviate server"
     },
     "abort": {
       "already_configured": "Already configured",
@@ -139,9 +140,10 @@
       },
       "entry_type": "Conversation agent",
       "abort": {
-        "cannot_connect": "Could not communicate with the server",
+        "cannot_connect": "Could not communicate with the LLM server",
         "unknown": "An unknown error occurred",
-        "reconfigure_successful": "Conversation Agent has been reconfigured"
+        "reconfigure_successful": "Conversation Agent has been reconfigured",
+        "cannot_connect_weaviate": "Could not communicate with the Weaviate server"
       }
     },
     "ai_task_data": {
